tests/semantic/types_components/types_components.err
Error: Undefined alias type N in definition of type cfg.TNode in file types_components.dl at line 17
      .type TNode = N
------^---------------
Warning: No rules/facts defined for relation cfg.edge in file types_components.dl at line 18
      .decl edge(a:TNode,b:TNode)
------------^---------------------
1 errors generated, evaluation aborted
